--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ loguru>=0.7.0
 djangorestframework>=3.14.0
 django-simpleui>=2024.1.1
 requests>=2.31.0
+colorama>=0.4.6
+psycopg2-binary>=2.9.0
+gunicorn>=21.2.0
+drf-spectacular>=0.27.0
